k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: products-api }
spec:
  replicas: 1
  selector: { matchLabels: { app: products-api } }
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata: { labels: { app: products-api } }
    spec:
      containers:
        - name: api
          image: products-api:local
          imagePullPolicy: Never
          ports: [{ containerPort: 8080 }]
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8080 }
            initialDelaySeconds: 30
            periodSeconds: 10
          startupProbe:
            httpGet: { path: /actuator/health, port: 8080 }
            failureThreshold: 30
            periodSeconds: 3
