k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata: { name: products-svc }
spec:
  type: NodePort
  selector: { app: products-api }
  ports:
    - port: 80
      targetPort: 8080
